# docscan

./: .gitignore  CMakeLists.txt  README.org  docscan.desktop  toys.el
doc/: design.org
src/: common.hpp  controller.cpp  controller.hpp  docscan_frame.cpp  docscan_frame.hpp  document_exporter.cpp  document_exporter.hpp  image_editor.cpp  image_editor.hpp  main.cpp  multipage_editor.cpp  multipage_editor.hpp
